--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,9 @@ import BaseLayout from '../layouts/BaseLayout.astro';
   <ul>
 	<li>Discord: <a href="https://discord.com/users/933054659067789363">d1onys1us</a></li>
 	<li>GitHub: <a href=https://github.com/d1onys1us>d1onys1us</a></li>
-	<li>Twitter: <a href=https://twitter.com/indraynor>indraynor</a></li>
+	<li>X: <a href=https://x.com/indraynor>indraynor</a></li>
 	<li>Warpcast: <a href=https://warpcast.com/arjuna>arjuna</a></li>
   </ul>
 
-  The best way to reach out is on Discord and if you want to communicate over encrypted chat I can share my Signal. I generally prefer Warpcast over Twitter these days.
+  The best way to reach out is on Discord and if you want to communicate over encrypted chat I can share my Signal. I generally prefer Warpcast over X these days.
 </BaseLayout>
