--- a/src/pages/musings/[slug].astro
+++ b/src/pages/musings/[slug].astro
@@ -19,7 +19,7 @@ const { musing } = Astro.props;
 const { Content } = await musing.render();
 ---
 <BaseLayout showHeader={false}>
-  <a href="/musings">&larr; Back to all musings</a>
+  <a href="/website/musings">&larr; Back to all musings</a>
   <article>
     <h1>{musing.data.title}</h1>
     <time datetime={musing.data.date.toISOString()}>
