Fix more things

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,12 +12,12 @@ const { showHeader = true } = Astro.props;
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>indraynor's site</title>
+    <title>d1onys1us' website</title>
   </head>
   <body>
     {showHeader && (
       <header>
-        <h1>indraynor's website</h1>
+        <h1>d1onys1us' website</h1>
         <nav>
           <a href="/website">Home</a>
           <a href="/website/musings">Musings</a>
