chore: move domain

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,8 +19,8 @@ const { showHeader = true } = Astro.props;
       <header>
         <h1>d1onys1us' website</h1>
         <nav>
-          <a href="/website">Home</a>
-          <a href="/website/musings">Musings</a>
+          <a href="">Home</a>
+          <a href="/musings">Musings</a>
         </nav>
       </header>
     )}
