chore: fix link

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,7 +19,7 @@ const { showHeader = true } = Astro.props;
       <header>
         <h1>d1onys1us' website</h1>
         <nav>
-          <a href="">Home</a>
+          <a href="/">Home</a>
           <a href="/musings">Musings</a>
         </nav>
       </header>
