--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,8 @@ import BaseLayout from '../layouts/BaseLayout.astro';
   <h2>Home</h2>
   <p>Welcome to my website! Here are some points of contact:</p>
   <ul>
-	<li>Discord: <a href="https://discord.com/users/933054659067789363">d1onys1us</a></li>
-	<li>GitHub: <a href=https://github.com/d1onys1us>d1onys1us</a></li>
+	<li>Discord: <a href="https://discord.com/users/933054659067789363">dionysuzx</a></li>
+	<li>GitHub: <a href=https://github.com/dionysuzx>dionysuzx</a></li>
 	<li>X: <a href=https://x.com/indraynor>indraynor</a></li>
 	<li>Warpcast: <a href=https://warpcast.com/arjuna>arjuna</a></li>
   </ul>
