--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 	<li>Discord: <a href="https://discord.com/users/933054659067789363">dionysuzx</a></li>
 	<li>GitHub: <a href=https://github.com/dionysuzx>dionysuzx</a></li>
 	<li>X: <a href=https://x.com/indraynor>indraynor</a></li>
-	<li>Warpcast: <a href=https://warpcast.com/arjuna>arjuna</a></li>
+	<li>Warpcast: <a href=https://warpcast.com/dionysuz.eth>dionysuz.eth</a></li>
   </ul>
 
   The best way to reach out is on Discord and if you want to communicate over encrypted chat I can share my Signal. I generally prefer Warpcast over X these days.
