--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
   <ul>
 	<li>Discord: <a href="https://discord.com/users/933054659067789363">dionysuzx</a></li>
 	<li>GitHub: <a href=https://github.com/dionysuzx>dionysuzx</a></li>
-	<li>X: <a href=https://x.com/indraynor>indraynor</a></li>
+	<li>X: <a href=https://x.com/dionysuzx>dionysuzx</a></li>
 	<li>Warpcast: <a href=https://warpcast.com/dionysuz.eth>dionysuz.eth</a></li>
   </ul>
 
