--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,10 @@ import BaseLayout from '../layouts/BaseLayout.astro';
   <ul>
 	<li>Discord: <a href="https://discord.com/users/933054659067789363">dionysuzx</a></li>
 	<li>GitHub: <a href=https://github.com/dionysuzx>dionysuzx</a></li>
-	<li>X: <a href=https://x.com/dionysuzx>dionysuzx</a></li>
+  <li>Signal: <a href=https://signal.me/#eu/mnsyyJITqUZ2ouonoU8WlbzTLFEdWC_5XBLljO6NYukJ7V8zADpIWr3qzCLqI2IU>dionysuzx.01</a></li>
 	<li>Warpcast: <a href=https://warpcast.com/dionysuz.eth>dionysuz.eth</a></li>
+	<li>X: <a href=https://x.com/dionysuzx>dionysuzx</a></li>
   </ul>
 
-  The best way to reach out is on Discord and if you want to communicate over encrypted chat I can share my Signal. I generally prefer Warpcast over X these days.
+  The best way to reach out is on Signal.
 </BaseLayout>
