feat: hide drafts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,3 +14,9 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 
   The best way to reach out is on Signal.
 </BaseLayout>
+
+<style>
+li {
+  margin-bottom: 0.5rem;
+}
+</style>
