--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,30 +1,38 @@
 ---
-import '../styles/global.css';
+import "../styles/global.css";
+import { getCollection } from "astro:content";
 
 interface Props {
-  showHeader?: boolean;
+    showHeader?: boolean;
 }
 
 const { showHeader = true } = Astro.props;
+const musings = await getCollection('musings', ({ data }) => {
+  return data.draft !== true;
+});
+const showMusings = musings.length > 0;
 ---
+
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>dionysuz's website</title>
-  </head>
-  <body>
-    {showHeader && (
-      <header>
-        <nav>
-          <a href="/">Home</a>
-          <a href="/musings">Musings</a>
-        </nav>
-      </header>
-    )}
-    <main>
-      <slot />
-    </main>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <meta name="generator" content={Astro.generator} />
+        <title>dionysuz's website</title>
+    </head>
+    <body>
+        {
+            showHeader && (
+                <header>
+                    <nav>
+                        <a href="/">Home</a>
+                        {showMusings && <a href="/musings">Musings</a>}
+                    </nav>
+                </header>
+            )
+        }
+        <main>
+            <slot />
+        </main>
+    </body>
 </html>
