--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,11 +3,11 @@ import "../styles/global.css";
 import { getCollection } from "astro:content";
 
 interface Props {
-    showHeader?: boolean;
+  showHeader?: boolean;
 }
 
 const { showHeader = true } = Astro.props;
-const musings = await getCollection('musings', ({ data }) => {
+const musings = await getCollection("musings", ({ data }) => {
   return data.draft !== true;
 });
 const showMusings = musings.length > 0;
@@ -18,6 +18,7 @@ const showMusings = musings.length > 0;
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
+        <meta name="description" content="dionysuz's website" />
         <title>dionysuz's website</title>
     </head>
     <body>
